[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/gradientbig6 v1.png" type="Texture" id=1]
[ext_resource path="res://assets/textures10.png" type="Texture" id=2]
[ext_resource path="res://older_versions/player5.gd" type="Script" id=3]
[ext_resource path="res://assets/bubsyskybox.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 2.5

[node name="player5" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Col" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="RayContainer" type="Node2D" parent="."]
visible = false

[node name="Ray0" type="RayCast2D" parent="RayContainer"]
enabled = true
cast_to = Vector2( 0, 10000 )

[node name="SpriteContainer" type="Node2D" parent="."]

[node name="Sprite0" type="Sprite" parent="SpriteContainer"]
z_index = -1
texture = ExtResource( 2 )
hframes = 11

[node name="Background" type="Node2D" parent="."]
visible = false
z_index = -3

[node name="Floor" type="Sprite" parent="Background"]
modulate = Color( 0.486275, 0.32549, 0.227451, 1 )
z_index = 1
texture = ExtResource( 1 )

[node name="Sky" type="TextureRect" parent="Background"]
modulate = Color( 0.290196, 0.211765, 0.376471, 1 )
margin_left = -180.0
margin_right = 180.0
margin_bottom = 217.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
